# mlops_2025_3

./: .gitignore  README.md  main.py  pyproject.toml
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate.1766915596.backup  terraform.tfstate.1766939566.backup  terraform.tfvars.example  variables.tf
infra/scripts/: clean_data.py  clean_data2.py  user_data.sh
infra/templates/: cloud-init.yaml
notebooks/: EDA_fraud_dataset.ipynb  EDA_fraud_dataset_cl.ipynb
