[project]
name = "mlops-2025-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "findspark>=2.0.1",
    "matplotlib>=3.9.4",
    "notebook>=7.5.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pyspark==3.0.3",
    "seaborn>=0.13.2",
]
